--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
            | 
           <a href="https://github.com/KrishnaCD93" alt="Github">Github</a>
            | 
-          <a href="mailto:krishna.c.duvvuri@gmail.com" alt="Email"><Email></a>
+          <a href="mailto:krishna.c.duvvuri@gmail.com" alt="Email">Email</a>
       </footer>
     </main>
   </body>
