--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,10 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+      <a href="https://twitter.com/duvvuri_krishna" class="btn" alt="Twitter">Twitter</a>
+      <a href="https://www.linkedin.com/in/krishna-duvvuri-90b9919a/" class="btn" alt="LinkedIn">LinkedIn</a>
+      <a href="https://github.com/KrishnaCD93"class="btn"  alt="Github">Github</a>
+      <a href="mailto:krishna.c.duvvuri@gmail.com" class="btn" alt="Email">Email</a>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
