--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
       <a href="https://twitter.com/duvvuri_krishna" class="btn" alt="Twitter">Twitter</a>
       <a href="https://www.linkedin.com/in/krishna-duvvuri-90b9919a/" class="btn" alt="LinkedIn">LinkedIn</a>
       <a href="https://github.com/KrishnaCD93"class="btn"  alt="Github">Github</a>
+      <a href="https://buildspace.so/@krishna"class="btn"  alt="Buildspace">Buildspace</a>
       <a href="mailto:krishna.c.duvvuri@gmail.com" class="btn" alt="Email">Email</a>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
