--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,6 +47,8 @@
            | 
           <a href="https://github.com/KrishnaCD93" alt="Github">Github</a>
            | 
+          <a href="https://buildspace.so/@krishna" alt="Buildspace">Buildspace</a>
+           | 
           <a href="mailto:krishna.c.duvvuri@gmail.com" alt="Email">Email</a>
       </footer>
     </main>
